Revision history for {{$dist->name}}

{{$NEXT}}

1.05      2014-07-31 18:26:03Z
    - If a parameterizable role was reinitialized after any parameters or a
      role block was declared, those declarations were lost. Reinitialization
      usually occurs when new metaroles are applied to the role by other
      MooseX modules.

1.04      2014-07-31 14:53:26Z
    - Convert this distribution to Dist::Zilla to resolve packaging insanity

1.03  2014-07-30
    - This extension is now implemented as a role metarole, which means it can
      (mostly) cooperate with other role extensions, such as
      MooseX::Role::WithOverloading. Note that you should load
      MooseX::Role::Parameterized _after_ other extensions.
    - This module no longer supports passing a "-metaclass" parameter when you
      load it. This was an artifact from a much earlier era of Moose
      extensions.
    - repository migrated to the github moose organization

1.02  2013-09-11
    - set %INC entries in test to avoid failures with
      Moose pre-2.11 (kentfrederic)
        https://github.com/sartak/MooseX-Role-Parameterized/pull/7
        https://rt.cpan.org/Ticket/Display.html?id=88593

1.01  2013-09-10
    - removed use of deprecated Class::MOP::load_class (ether)

1.00  2012-01-12
    - MooseX::Role::Parameterized now depends on Moose 2.0300
      released 2011-09-23 for its several core improvements, hence the
      major version number bump.

    - MXRP now uses the new meta_lookup feature added to Moose 2.0300
      (specifically for MXRP) to avoid duplicating Moose-0.60-era
      Moose::Role sugar. This means the error messages you get are
      better, and there's a lot less ugly code in MXRP.
    - Remove alias/excludes special case errors. They have long since been
      replaced in core Moose by -alias and -excludes, and were finally
      removed in Moose 2.0200.
    - Expressly forbid using role { } inside role { } (which makes no