@@ -6,20 +6,20 @@ do {
     package Labeled;
     use MooseX::Role::Parameterized;
 
-    ::is(MooseX::Role::Parameterized->_current_metaclass, undef, 'no metaclass yet');
+    ::is(MooseX::Role::Parameterized->current_metaclass, undef, 'no metaclass yet');
 
     parameter default => (
         is  => 'rw',
         isa => 'Str',
     );
 
-    ::is(MooseX::Role::Parameterized->_current_metaclass, undef, 'no metaclass yet');
+    ::is(MooseX::Role::Parameterized->current_metaclass, undef, 'no metaclass yet');
 
     role {
         my $p    = shift;
         my %args = @_;
 
-        ::is(MooseX::Role::Parameterized->_current_metaclass, $args{operating_on}, 'now we have a metaclass');
+        ::is(MooseX::Role::Parameterized->current_metaclass, $args{operating_on}, 'now we have a metaclass');
 
         has label => (
             is      => 'rw',
@@ -27,19 +27,19 @@ do {
             default => $p->default,
         );
 
-        ::is(MooseX::Role::Parameterized->_current_metaclass, $args{operating_on}, 'now we have a metaclass');
+        ::is(MooseX::Role::Parameterized->current_metaclass, $args{operating_on}, 'now we have a metaclass');
     };
 
-    ::is(MooseX::Role::Parameterized->_current_metaclass, undef, 'no metaclass yet');
+    ::is(MooseX::Role::Parameterized->current_metaclass, undef, 'no metaclass yet');
 };
 
 do {
     package Foo;
     use Moose;
 
-    ::is(MooseX::Role::Parameterized->_current_metaclass, undef, 'no metaclass yet');
+    ::is(MooseX::Role::Parameterized->current_metaclass, undef, 'no metaclass yet');
     with Labeled => { default => 'foo' };
-    ::is(MooseX::Role::Parameterized->_current_metaclass, undef, 'metaclass is gone now');
+    ::is(MooseX::Role::Parameterized->current_metaclass, undef, 'metaclass is gone now');
 };
 
 done_testing;
